HtmlUi: Fixed "wobbling" tree items on IE9 (removed min-height)

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/desktop/Outline.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/desktop/Outline.css
@@ -22,7 +22,6 @@
     /* set top/bottom padding for item */
     padding-top: 8px;
     padding-bottom: 8px;
-    min-height: @outline-item-control-size;
 
     &.parent {
       .font-text-plus(@bold);
