--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/tree/Tree.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/tree/Tree.css
@@ -34,7 +34,6 @@
   /* set top/bottom padding for item */
   padding-top: 6px;
   padding-bottom: 6px;
-  min-height: @tree-item-control-size;
 
   &.parent {
   }
